# extract-video-frames

./: BUILD.sh  README.md
deploy/: extract_video_frame.py  extract_video_frame_activitynet.py  runme_extract_video_frame_activitynet.sh  runme_extract_video_frame_kinetics.sh  runme_extract_video_frame_ssbd.sh  script_extract_video_frame_activitynet.sh  script_extract_video_frame_kinetics.sh  script_extract_video_frame_ssbd.sh
python/: extract_video_frame.py  extract_video_frame_activitynet.py
src/: CMakeLists.txt  extract_frames.cpp  extract_frames_with_segment.cpp
tests/: test_script.sh
